--- a/style.css
+++ b/style.css
@@ -89,6 +89,12 @@
   border-bottom: 1px solid var(--border-color);
 }
 
+.btn:hover{
+  transition: all .2s linear;
+  background-color: white;
+  color: black;
+}
+
 .btn-text {
   font-family: 'Roboto Mono', monospace;
   font-size: 18px;
@@ -237,4 +243,17 @@ nav > .nav-section {
   display: grid;
   top: 10%;
   left: 47%;
+}
+/* do not group these rules */
+*::-webkit-input-placeholder {
+  color: rgb(161, 161, 161);
+}
+.inputField {
+  background: var(--background-color);
+  border-right: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  color: white;
+  
 }
