--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Roboto+Mono:wght@500&display=swap');
 
 :root{
-  --a: -800px;
-  --b: 800px;
   --background-color: rgb(42, 43, 46);
   --border-color: rgba(255, 255, 255, 0.1);
 }
@@ -42,15 +40,66 @@
 .line {
   display: flex;
   width: 100%;
-  border-top: 1px solid var(--border-color);
-  border-bottom: 1px solid var(--border-color);
+  border-top: 1px solid white;
+  border-bottom: 1px solid  white;
   justify-content: center;
+  background-color: black;
 }
 
+
+.taskLine{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.tasksScanField {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  height: 50px;
+  background-color: black;
+}
+
+
+.scoreBoard{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-left: 300px;
+}
+
+
+.taskLine > button, .scoreBoard > div {
+  flex-grow: 1;
+}
 
 .customTaskPanel{
   display:flex;
   flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+#taskTextField {
+  width: 99%;
+}
+.customTaskPanel > .fields {
+  display: flex;
+  flex-direction: row;
+  gap: 350px;
+}
+
+.fields > .block {
+  display: flex;
+  flex-direction: row;
+  flex-grow: 1;
+}
+
+#taskName, #maximumErrors, #timerTime {
+  width: 200px;
+  height: 30px;
 }
 
 
