--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   
 }
 
+
 .mainMenu{
   display:flex;
   flex-direction: column;
@@ -46,19 +47,69 @@
   background-color: black;
 }
 
-
 .taskLine{
   display: flex;
-  flex-direction: row;
+}
+
+.btn-border {
+  border: 1px solid var(--border-color) !important
+}
+
+.alertBox {
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color: rgba(34, 35, 36, 0.8);
+}
+
+.alert{
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 5px;
+  border: 2px solid var(--border-color);
+}
+
+.alert > #titleLine {
+  display: flex;
+  align-items: center;
+  width: 300px;
+  height: 30px;
+  background-color: var(--background-color);
+  border-bottom: 1px solid var(--border-color);
+
+}
+
+.alert > #contentLine {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  min-height: 30px;
+  background-color: var(--background-color); 
+  border-bottom: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
 }
 
 .tasksScanField {
   display: flex;
-  flex-direction: row;
-  width: 90%;
-  height: 50px;
+  flex-direction:column;
+  width: 100%;
+  height: 150px;
   background-color: black;
+  border-top: 2px solid white;
+  border-bottom: 2px solid white;
+  overflow-x: auto;
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
 
