--- a/style.css
+++ b/style.css
@@ -20,16 +20,14 @@
   display:flex;
   flex-direction: column;
   gap: 20px;
-  height: 95vh;
-  width: 95vw;
+  height: 100vh;
+  width: 100vw;
   position: absolute;
   background-color: var(--background-color,);
   bottom: 100vh;
   transition: bottom .4s;
-  left: 2.5%;
   z-index: 1;
   border: 2px solid var(--border-color);
-
 }
 
 .scoreBoard{
@@ -55,16 +53,31 @@
   border: 1px solid var(--border-color) !important
 }
 
-.alertBox {
+.alertBox, .confirmBox, .askBox {
+  opacity: 0;
+  visibility: hidden;
   position: absolute;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
   z-index: 10;
-  background-color: rgba(34, 35, 36, 0.8);
+  background-color: rgba(34, 35, 36, 0.95);
+  transition: all .3s;
+}
+
+
+
+.confirmWindow{
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  overflow: hidden;
+  border-radius: 5px;
+  border: 2px solid var(--border-color)
 }
 
 .alert{
@@ -89,7 +102,6 @@
 
 .alert > #contentLine {
   display: flex;
-  justify-content: center;
   align-items: center;
   width: 300px;
   min-height: 30px;
@@ -227,8 +239,6 @@ body {
 ); */
  display: flex;
  flex-direction: column;
- height: 100vh;
- width: 100vw;
  margin: 0px;
  overflow: hidden;
 }
