--- a/style.css
+++ b/style.css
@@ -35,14 +35,107 @@
 }
 
 
+.taskConfirmWindow{
+  width: 500px;
+  height: 600px;
+  background-color: var(--background-color);
+  border-radius: 20px;
+  border: 1px solid var(--border-color);
+  overflow: hidden;
+}
+
+.sidesContainer {
+  display: flex;
+  flex-direction: row;
+}
+
+.sidesContainer> .tcwSideLeft {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 50%;
+}
+.tcwSideLeft > .taskContainer {
+  flex-basis: 1;
+  height: 500px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+.textBox > .tcwText {
+  position: relative;
+  font-size: 15px;
+  display: flex;
+  width: 280px;
+  height: 480px;
+  overflow-x: auto;
+  list-style: none;
+}
+
+.tcwSideLeft > .tcwBtn {
+  width: 300px;
+  height: 65px;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidesContainer > .tcwSideRight {
+  position: relative;
+  width: 50%;
+  height: 600px;
+  display: flex;
+  flex-direction: column;
+  flex-basis: auto;
+}
+
+.tcwSideRight > .block {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  max-width: 200px;
+  overflow: hidden;
+  flex-grow: 1;
+  border-bottom: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+}
+
+
+.block > #a {
+  display: flex;
+  position: relative;
+  width: 100%;
+  padding: 5px 5px;
+  justify-content: center;
+  border-bottom: 1px solid var(--border-color);
+  align-items: center;
+}
+
+.block > #b {
+  display: flex;
+  position: relative;
+  top: 70px;
+  width: 90%;
+  padding: 5px;
+  border-top: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
 
 .line {
   display: flex;
   width: 100%;
-  border-top: 1px solid white;
-  border-bottom: 1px solid  white;
+  border-top: 1px solid var(--border-color);
+  border-bottom: 1px solid  var(--border-color);
   justify-content: center;
-  background-color: black;
 }
 
 .taskLine{
@@ -114,7 +207,7 @@
   display: flex;
   flex-direction:column;
   width: 100%;
-  height: 150px;
+  height: 400px;
   background-color: black;
   border-top: 2px solid white;
   border-bottom: 2px solid white;
@@ -189,6 +282,12 @@
   color: black;
 }
 
+.btn:active{
+  transition: all .1s linear;
+  background-color: var(--background-color);
+  color: white;
+}
+
 .btn-text {
   font-family: 'Roboto Mono', monospace;
   font-size: 18px;
@@ -228,6 +327,19 @@
   font-size: 30px;
   color: white;
 }
+
+#text-field > #text2 {
+  display: inline;
+  user-select: none;
+  white-space: pre;
+  position: relative;
+  left: 10px;
+  top: 10px;
+  font-family: 'Roboto Mono', monospace;
+  font-size: 30px;
+  color: white;
+}
+
 
 body {
  background-color: var(--background-color);
