--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@
 }
 .tcwSideLeft > .taskContainer {
   flex-basis: 1;
-  height: 500px;
+  height: 502px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -78,7 +78,7 @@
 
 .tcwSideLeft > .tcwBtn {
   width: 300px;
-  height: 65px;
+  height: 62px;
   justify-content: center;
   align-items: center;
 }
@@ -345,6 +345,7 @@
   user-select: none;
   white-space: pre;
   position: relative;
+  text-align: start;
   left: 10px;
   top: 10px;
   font-family: 'Roboto Mono', monospace;
@@ -460,4 +461,43 @@ nav > .nav-section {
   border-left: 1px solid var(--border-color);
   color: white;
   
+}
+
+.keyboardContainer {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  top: 613px;
+}
+
+.keyLine {
+  position: inherit;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 5px 0;
+}
+
+
+
+.keyboardKey {
+  height: 45px;
+    width: 6%;
+    max-width: 90px;
+    margin: 3px;
+    border-radius: 4px;
+    border: none;
+    background: #ffffff33;
+    color: #ffffff;
+    font-size: 1.05rem;
+    outline: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    transition: all .2s;
+}
+.space {
+  width: 100px !important; 
 }
