--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 .mmLeftSideBlock:hover > button{
@@ -231,6 +232,7 @@
   transition: all .4s;
   width: 90%;
   max-height: 30px;
+  cursor: pointer;
 }
 
 .btnTask:hover {
@@ -710,6 +712,7 @@
   background: rgb(51, 53, 58);
   border-right: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
+  cursor: pointer;
 }
 
 .btn:hover{
@@ -823,6 +826,7 @@ nav {
   display: flex;
   width: 100%;
   border-bottom: 1px solid var(--border-color);
+  cursor: pointer;
 }
 
 footer {
